[추천 고도화] refactor: KAN-355 추천 서비스 캐싱 및 토큰 수 절감
* refactor: KAN-357 추천 조회 API Redis 캐시 적용

* refactor: KAN-358 추천 서비스 사전 필터링 및 JSON 압축 도입